# emogen

./: README.md  pyproject.toml
scripts/: better_trainer.py  collators.py  emotion_data.py  emotion_trainer.py  emotion_trainer_v2.py  optimize.py  sentiment.py  sentiment_data.py  sentiment_evaluate.py  sentiment_trainer.py  trainer.py  utils.py
