[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emogen"
dynamic = ["version"]
description = "A Python library for generating emotions."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
    { name = "Yasas Senarath", email = "12231659+ysenarath@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Yasas Senarath/emogen#readme"
Issues = "https://github.com/Yasas Senarath/emogen/issues"
Source = "https://github.com/Yasas Senarath/emogen"

[tool.hatch.version]
path = "src/emogen/__init__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/emogen tests}"

[tool.coverage.run]
source_pkgs = ["emogen", "tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
emogen = ["src/emogen", "*/emogen/src/emogen"]
tests = ["tests", "*/emogen/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
